--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,9 @@
   "name": "OpenFactory-SDK Dev Container",
   "image": "mcr.microsoft.com/devcontainers/python:3.10",
   "features": {
-    "docker-in-docker": "latest"
+    "docker-in-docker": {
+      "version": "latest"
+    }
   },
   "postCreateCommand": "pip install -e .",
   "customizations": {
