--- a/.github/workflows/publish_devcontainer_feature.yml
+++ b/.github/workflows/publish_devcontainer_feature.yml
@@ -24,4 +24,4 @@ jobs:
           context: .devcontainer/features/openfactory
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/devcontainer-feature-openfactory-sdk:latest
+          tags: ghcr.io/demo-smart-factory-concordia-university/devcontainer-feature-openfactory-sdk:latest
