--- a/.github/workflows/publish_devcontainer_feature.yml
+++ b/.github/workflows/publish_devcontainer_feature.yml
@@ -1,27 +1,26 @@
-name: Build and Publish OpenFactory-SDK Devcontainer Feature Docker Image
+name: Publish OpenFactory SDK Feature
 
 on: [workflow_dispatch]
 
 jobs:
-  build_and_push:
-    name: Build and Push Docker Image to GHCR
+  publish:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-          
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
 
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v5
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          context: .devcontainer/features/openfactory
-          file: .devcontainer/features/openfactory/Dockerfile
-          push: true
-          tags: ghcr.io/demo-smart-factory-concordia-university/devcontainer-feature-openfactory-sdk:latest
+          node-version: 18
+
+      - name: Install Dev Container CLI
+        run: npm install -g @devcontainers/cli
+
+      - name: Publish feature to GHCR
+        run: |
+          devcontainer features publish \
+            --namespace demo-smart-factory-concordia-university \
+            --registry ghcr.io \
+            ./.devcontainer/features/openfactory
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
