--- a/.devcontainer/features/openfactory-sdk/devcontainer-feature.json
+++ b/.devcontainer/features/openfactory-sdk/devcontainer-feature.json
@@ -1,5 +1,5 @@
 {
-  "id": "openfactory",
+  "id": "openfactory-sdk",
   "version": "0.1.1",
   "name": "OpenFactory SDK Feature",
   "description": "Installs the OpenFactory SDK and its local infrastructure.",
