Fix file copy into devcontainer

--- a/.devcontainer/features/openfactory-sdk/devcontainer-feature.json
+++ b/.devcontainer/features/openfactory-sdk/devcontainer-feature.json
@@ -2,5 +2,9 @@
   "id": "openfactory-sdk",
   "version": "0.1.1",
   "name": "OpenFactory SDK Feature",
-  "description": "Installs the OpenFactory SDK and its local infrastructure."
+  "description": "Installs the OpenFactory SDK and its local infrastructure.",
+  "postCreateCommand": "cp -r /usr/local/share/openfactory-sdk/. .",
+  "installsAfter": [
+        "ghcr.io/devcontainers/features/common-utils"
+    ]
 }
