--- a/.devcontainer/features/infra/devcontainer-feature.json
+++ b/.devcontainer/features/infra/devcontainer-feature.json
@@ -1,5 +1,5 @@
 {
-  "id": "openfactory-sdk",
+  "id": "infra",
   "version": "0.1.3",
   "name": "OpenFactory SDK Feature",
   "description": "Installs the OpenFactory SDK and its local infrastructure.",
