--- a/.github/workflows/publish_devcontainer_feature.yml
+++ b/.github/workflows/publish_devcontainer_feature.yml
@@ -1,4 +1,4 @@
-name: "Publish dev container features"
+name: "Publish dev container features & Generate Documentation"
 on:
   workflow_dispatch:
 
@@ -18,5 +18,21 @@ jobs:
         with:
           publish-features: "true"
           base-path-to-features: ".devcontainer/features"
+          generate-docs: "true"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create PR for Documentation
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -e
+          git config --global user.email github-actions[bot]@users.noreply.github.com
+          git config --global user.name github-actions[bot]
+          git config pull.rebase false
+          branch=automated-documentation-update-$GITHUB_RUN_ID
+          git checkout -b $branch
+          git add .devcontainer/features/**/README.md
+          git commit -m 'Automated documentation update [skip ci]' || exit 0
+          git push origin "$branch"
+          gh pr create --title "Automated documentation update" --body "This PR updates generated docs." || exit 0
