--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
 requires-python = ">=3.8"
 
 [project.scripts]
-openfactory-sdk = "openfactory_sdk.cli:cli"
+openfactory-sdk = "openfactory_sdk.cli:ofa_sdk_cli"
 
 [build-system]
 requires = ["setuptools>=61.0"]
